add tag, add register
